--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,12 @@ on:
     branches: [ main ]
 
 env:
-  # global defaults for all jobs
+  # Default Node environment (override per-job if you want)
   NODE_ENV: test
 
 jobs:
   checkout:
-    name: Checkout Code
+    name: Checkout code
     runs-on: ubuntu-latest
     outputs:
       sha: ${{ steps.rev.outputs.sha }}
@@ -25,22 +25,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Java
+
+      # ↑ If you prefer to stay on Java 17 instead of 21, change <release> in your pom.xml to 17
+      - name: Set up Java 21
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: '17'
-      - name: Inject DB creds from Secrets
-        # these env vars become available to Spring Boot at runtime
+          java-version: '21'
+          cache: maven
+
+      - name: Run Maven build & tests
+        # inject your DB creds from GitHub Secrets
         env:
-          DB_URL: ${{ secrets.DB_URL }}
+          DB_URL:      ${{ secrets.DB_URL }}
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        run: |
-          mvn clean verify -B
+        run: mvn clean verify -B
 
   frontend:
-    name: Build & Test React/Node
+    name: Lint, Test & Build React/Node
     needs: checkout
     runs-on: ubuntu-latest
     strategy:
@@ -48,15 +51,27 @@ jobs:
         node-version: [18.x]
     steps:
       - uses: actions/checkout@v3
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Copy in .env for Node (if you have a local .env.example)
-        # OPTIONAL: if you committed a .env.example with placeholders
+      # ---- FIX #2: ensure your .env.example actually exists under ./frontend,
+      # or generate .env from secrets instead of copying .env.example.
+
+      # Option A: copy a committed example
+      - name: Copy in .env for frontend
+        working-directory: ./frontend
         run: |
-          cp .env.example .env
+          if [ -f .env.example ]; then
+            cp .env.example .env
+          else
+            echo "No .env.example found, generating from secrets..."
+            cat <<EOF > .env
+            REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
+            EOF
+          fi
 
       - name: Install dependencies
         working-directory: ./frontend
@@ -66,36 +81,55 @@ jobs:
         working-directory: ./frontend
         run: npm run lint && npm run type-check
 
-      - name: Run Unit Tests
+      - name: Run unit tests
         working-directory: ./frontend
         run: npm test -- --ci --reporters=default
 
-      - name: Build Production Bundle
+      - name: Build production bundle
         working-directory: ./frontend
-        # ensure your REACT_APP_ vars are set in Secrets → Settings → Environments
+        # ensure REACT_APP_* keys come from Secrets → Settings → Secrets
         env:
           REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
         run: npm run build
 
+  security-scan:
+    name: Snyk security scan
+    needs: checkout
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      # install & authenticate Snyk CLI
+      - uses: snyk/actions/setup@v1
+        with:
+          version: 'latest'
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Authenticate Snyk CLI
+        run: snyk auth ${{ secrets.SNYK_TOKEN }}
+
+      - name: Run snyk test
+        run: snyk test --all-projects
+
   e2e:
-    name: E2E Tests
+    name: E2E Tests (Cypress)
     needs: [backend, frontend]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-        with: { node-version: 18.x }
+        with:
+          node-version: 18.x
 
       - name: Install all deps
         run: npm ci
 
-      - name: Start Backend & Frontend
+      - name: Start services
         run: |
-          # adapt these: start servers in the background
           cd backend && mvn spring-boot:run & 
           cd frontend && npm start &
-          # wait for them to come up
-          npx wait-on http://localhost:3000 && npx wait-on http://localhost:8080
+          npx wait-on http://localhost:8080 && npx wait-on http://localhost:3000
 
       - name: Run Cypress
         run: npx cypress run
@@ -110,18 +144,6 @@ jobs:
         with:
           configPath: ./lighthouserc.json
 
-  security-scan:
-    name: Snyk Security Scan
-    needs: checkout
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: snyk/actions/setup@v1
-      - name: Run Snyk test
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk test
-
   deploy:
     name: Deploy to Vercel
     if: github.ref == 'refs/heads/main'
@@ -132,6 +154,6 @@ jobs:
       - uses: amondnet/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-org-id:  ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: ./frontend
