--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,10 @@ services:
   # Backend Web Service
   - type: web
     name: finflow-backend
+    runtime: java21
     env: java
     plan: free
-    buildCommand: mvn clean package -DskipTests
+    buildCommand: mvn clean install -DskipTests
     startCommand: java -Dserver.port=$PORT -jar target/finance-forecast-app-0.0.1-SNAPSHOT.jar
     healthCheckPath: /actuator/health
     envVars:
@@ -47,3 +48,4 @@ databases:
     databaseName: financeapp
     user: financeapp
     plan: free
+
